--- a/src/pages/VideoDetails/videoDetails.css
+++ b/src/pages/VideoDetails/videoDetails.css
@@ -25,6 +25,11 @@
 	height: 40dvw;
 }
 
+#page-videoDetails #no-iframe {
+	width: 100%;
+	height: 40dvw;
+}
+
 #page-videoDetails #currentStep p {
 	font-size: 12px;
 	margin-top: -4px;
